# unhcr-geneva-tech-hub-app

./: .env  .env.dev  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  Makefile  README.md  README.tims.md  ROADMAP.md  Readme_Guidance.md  azure-pipelines.yml  default.conf.template  docker-compose-caddy.yml  docker-compose-restapi-dev.yml  docker-compose.dev.yml  docker-compose.jupyter.yaml  docker-compose.prod.yml  docker-compose.yml  ops  package-lock.json  package.json  stopDevFrontend.sh  todo_cooking.md  traefik.yaml  version
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: .commit-template  pre-commit  pre-push  prepare-commit-msg
azure/: 2ZQpJ3UpbjAYXYGaXEJl8lV0TOI.cer  2ZQpJ3UpbjAYXYGaXEJl8lV0TOI.pem  DqUu8gf-nAgcyjP3-SuplNAXAnc.cer  DqUu8gf-nAgcyjP3-SuplNAXAnc.pem  Makefile  Mr5-AUibfBii7Nd1jBebaxboXW0.cer  Mr5-AUibfBii7Nd1jBebaxboXW0.pem  OzZ5Dbmcso9Qzt2ModGmihg30Bo.cer  OzZ5Dbmcso9Qzt2ModGmihg30Bo.pem  add_to_config_ini.sh  convert.sh  import.sh  jS1Xo1OWDj_52vbwGNgvQO2VzMc.cer  jS1Xo1OWDj_52vbwGNgvQO2VzMc.pem  jwt_keys.ini  jwt_keys.json  l3sQ-50cCH4xBVZLHTGwnSR7680.cer  l3sQ-50cCH4xBVZLHTGwnSR7680.pem  nOo3ZDrODXEK1jKWhXslHR_KXEg.cer  nOo3ZDrODXEK1jKWhXslHR_KXEg.pem
azure-cron/: Dockerfile  Makefile  add_jwt_keys_to_couchdb_via_api.sh  add_to_config.sh  add_to_csv.sh  add_to_ini.sh  add_to_running_db.sh  azure.json  convert.sh  cron-tab.txt  entrypoint.sh  import.sh  ini.csv  jwt_keys.ini
backend/: .pre-commit-config.yaml  Makefile  pyproject.toml
backend/tests/: test_unhcr_tss.py
backend/unhcr_tss/: config.py  main.py
backend/unhcr_tss/models/: __init__.py
backend/unhcr_tss/routers/: root.py
backup/: Dockerfile
caddy/: Caddyfile  Caddyfile.dev  Dockerfile  (+1 more)
rest-api/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
rest-api/unhcr_tss/: config.py  main.py  settings.toml
rest-api/unhcr_tss/routers/: files.py  register_email.py
rest-api/unhcr_tss/utils/: auth.py  azure_blob_service.py  mimetype.py  s3client.py
uploadFASTAPI/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  settings.toml
uploadFASTAPI/unhcr_tss/: config.py  main.py  settings.toml
uploadFASTAPI/unhcr_tss/routers/: files.py  ping.py  root.py  upload.py
uploadFASTAPI/unhcr_tss/utils/: auth.py  mimetype.py  s3client.py  size.py
(+678 files in other folders)
